# incolume.py.model-2023-07-05

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml
.git-hooks/: commit-msg  commit-msg.sample  post-commit  post-push  pre-commit  pre-commit.sh.sample  pre-push  prepare-commit-msg  prepare-commit-msg.sh.sample
.github/workflows/: docs.yml  docs_ci_cd.yml  tests_ci_cd.yaml
about/CHANGELOG/: index.html
about/CONTRIBUTORS/: index.html
about/LICENSE/: index.html
api/: index.html
coverage_report/: cov.xml
coverage_report/html/: d_bcbda8c8a6832b00___init___py.html  index.html  status.json
docs/: index.md  prefacio.md
docs/about/: CHANGELOG.md  CONTRIBUTORS.md
docs/api/: index.md  skell.md
docs/stylesheets/: extra.css
docs/user_guide/: COVENTIONAL_COMMITS.md  INSTALLATION.md  development.md  usage.md
incolume/py/model_2023_07_05/: __init__.py  another.py  numbers.py  other.py  skell.py  version.txt
incolume/py/model_2023_07_05/utils/: __init__.py
prefacio/: index.html
site/: 404.html  objects.inv
site/about/CONTRIBUTORS/: index.html
site/api/skell/: index.html
site/prefacio/: index.html
site/user_guide/EXAMPLES/: index.html
site/user_guide/writing-your-docs/: index.html
stylesheets/: extra.css
tests/: conftest.py  test_package.py  test_semver.py  test_skell.py  test_utils.py  test_void.py
user_guide/COVENTIONAL_COMMITS/: index.html
user_guide/INSTALLATION/: index.html
user_guide/code_of_conduct/: index.html
user_guide/development/: index.html
user_guide/usage/: index.html
user_guide/writing-your-docs/: index.html
user_guide/zenpy/: index.html
