[tool.poetry]
name = "incolume-py-model-2023-07-05"
version = "0.1.0"
description = ""
authors = ["britodfbr <britodfbr@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "incolume"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
